unpackaged/main/default/objects/Animals_at_the_Zoo__c/Animals_at_the_Zoo__c.object-meta.xml
<CustomObject>
    <label>Animals at the Zoo</label>
    <nameField>
        <label>Animals at the Zoo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animals at the Zoos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>