unpackaged/main/default/objects/Animals_at_the_Zoo__c/fields/Aardvak__c.field-meta.xml
<CustomField>
    <fullName>Aardvak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aardvak</label>
    <type>Checkbox</type>
</CustomField>