unpackaged/main/default/objects/Animals_at_the_Zoo__c/fields/Capybaras__c.field-meta.xml
<CustomField>
    <fullName>Capybaras__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capybara</label>
    <type>Checkbox</type>
</CustomField>