unpackaged/main/default/objects/Animals_at_the_Zoo__c/fields/Geese__c.field-meta.xml
<CustomField>
    <fullName>Geese__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geese</label>
    <type>Checkbox</type>
</CustomField>