unpackaged/main/default/objects/Animals_at_the_Zoo__c/fields/Giraffe__c.field-meta.xml
<CustomField>
    <fullName>Giraffe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Giraffe</label>
    <type>Checkbox</type>
</CustomField>