unpackaged/main/default/objects/Animals_at_the_Zoo__c/fields/Gorilla__c.field-meta.xml
<CustomField>
    <fullName>Gorilla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gorilla</label>
    <type>Checkbox</type>
</CustomField>