unpackaged/main/default/objects/Animals_at_the_Zoo__c/fields/Hippo__c.field-meta.xml
<CustomField>
    <fullName>Hippo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hippo</label>
    <type>Checkbox</type>
</CustomField>