unpackaged/main/default/objects/Animals_at_the_Zoo__c/fields/Lions__c.field-meta.xml
<CustomField>
    <fullName>Lions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lions</label>
    <type>Checkbox</type>
</CustomField>