unpackaged/main/default/objects/Animals_at_the_Zoo__c/fields/Rhino__c.field-meta.xml
<CustomField>
    <fullName>Rhino__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rhino</label>
    <type>Checkbox</type>
</CustomField>