unpackaged/main/default/objects/Animals_at_the_Zoo__c/fields/Tigers__c.field-meta.xml
<CustomField>
    <fullName>Tigers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tigers</label>
    <type>Checkbox</type>
</CustomField>